# restic-metrics-exporter

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: async_update.rs  environment.rs  main.rs  persistence.rs  restic.rs  server.rs
