# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "restic_metrics"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "restic-metrics-exporter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
console = "0.15.7"
itertools = "0.11.0"
metrics = "0.21.1"
metrics-exporter-prometheus = { version ="0.12.1", default-features = false, features = ["http-listener"] }
metrics-util = "0.15.1"
serde = { version ="1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["time", "rt", "macros", "rt-multi-thread"] }
